Fix minor style fix for event-list-scroll overflowing past event-list
- just put display: flex on the event-list component :host styles

--- a/client/app/dashboard/event-viewer/event-list/event-list.component.scss
+++ b/client/app/dashboard/event-viewer/event-list/event-list.component.scss
@@ -4,6 +4,9 @@
 	width: 100%;
 	height: 100%;
 	flex: 6 0 auto;
+
+	display: flex;
+	flex-direction: column;
 }
 
 .event-list-header{
